Remove show player detail button

--- a/jugadores.html
+++ b/jugadores.html
@@ -77,76 +77,76 @@
       <!-- Lista de jugadores -->
       <div id="playersList" class="row g-4">
         <!-- Fútbol -->
-        <div class="col-md-3 player-card footballOption" data-player="elena">
+        <div class="col-md-3 player-card footballOption"
+             data-player="elena"
+             data-bs-toggle="modal"
+             data-bs-target="#playerModal"
+             data-name="Elena Suarez"
+             data-team="Barcelona"
+             data-sport="Fútbol"
+             data-stats="Partidos: 14, Goles: 4, Asistencias: 8">
           <div class="card bg-light">
             <div class="card-body">
               <h2 class="card-title fw-bold">Elena Suarez</h2>
               <img src="assetss/img/elena.webp" class="card-img-top" alt="Jugadora Elena de Barcelona">
               <h3>Barcelona</h3>
               <p class="card-text">Fútbol</p>
-              <button class="btn btn-primary btn-sm view-player-btn"
-                      data-bs-toggle="modal"
-                      data-bs-target="#playerModal"
-                      data-name="Elena Suarez"
-                      data-team="Barcelona"
-                      data-sport="Fútbol"
-                      data-stats="Partidos: 14, Goles: 4, Asistencias: 8">Ver detalles</button>
             </div>
           </div>
         </div>
 
-        <div class="col-md-3 player-card footballOption" data-player="carlos">
+        <div class="col-md-3 player-card footballOption"
+             data-bs-toggle="modal"
+             data-bs-target="#playerModal"
+             data-name="Carlos Gonzalez"
+             data-team="Barcelona"
+             data-sport="Fútbol"
+             data-stats="Partidos: 10, Goles: 2, Asistencias: 5"
+             data-player="carlos">
           <div class="card bg-light">
             <div class="card-body">
               <h2 class="card-title fw-bold">Carlos Gonzalez</h2>
               <img src="assetss/img/carlos.webp" class="card-img-top" alt="Jugador Carlos de Valencia">
               <h3>Valencia</h3>
               <p class="card-text">Fútbol</p>
-              <button class="btn btn-primary btn-sm view-player-btn"
-                      data-bs-toggle="modal"
-                      data-bs-target="#playerModal"
-                      data-name="Carlos Gonzalez"
-                      data-team="Barcelona"
-                      data-sport="Fútbol"
-                      data-stats="Partidos: 10, Goles: 2, Asistencias: 5">Ver detalles</button>
             </div>
           </div>
         </div>
 
         <!-- Baloncesto -->
-        <div class="col-md-3 player-card basketOption" data-player="elena">
+        <div class="col-md-3 player-card basketOption" 
+             data-player="elena"
+             data-bs-toggle="modal"
+             data-bs-target="#playerModal"
+             data-name="Manuel Sevilla"
+             data-team="Toledo Baloncesto"
+             data-sport="Baloncesto"
+             data-stats="Partidos: 6, Puntos: 80, Asistencias: 6">
           <div class="card bg-light">
             <div class="card-body">
               <h2 class="card-title fw-bold">Manuel Sevilla</h2>
               <img src="assetss/img/manuel.png" class="card-img-top" alt="Jugador Manuel de Toledo Baloncesto">
               <h3>Toledo Baloncesto</h3>
               <p class="card-text">Baloncesto</p>
-              <button class="btn btn-primary btn-sm view-player-btn"
-                      data-bs-toggle="modal"
-                      data-bs-target="#playerModal"
-                      data-name="Manuel Sevilla"
-                      data-team="Toledo Baloncesto"
-                      data-sport="Baloncesto"
-                      data-stats="Partidos: 6, Puntos: 80, Asistencias: 6">Ver detalles</button>
             </div>
           </div>
         </div>
 
         <!-- Voleibol -->
-        <div class="col-md-3 player-card volleyOption" data-player="sara">
+        <div class="col-md-3 player-card volleyOption" 
+             data-player="sara"
+             data-bs-toggle="modal"
+             data-bs-target="#playerModal"
+             data-name="Sara Pérez"
+             data-team="Los Titanes"
+             data-sport="Voleibol"
+             data-stats="Partidos: 8, Puntos: 20, Asistencias: 6">
           <div class="card bg-light">
             <div class="card-body">
               <h2 class="card-title fw-bold">Sara Pérez</h2>
               <img src="assetss/img/sara.webp" class="card-img-top" alt="Jugadora Sara de Los Titanes">
               <h3>Los Titanes</h3>
               <p class="card-text">Voleibol</p>
-              <button class="btn btn-primary btn-sm view-player-btn"
-                      data-bs-toggle="modal"
-                      data-bs-target="#playerModal"
-                      data-name="Sara Pérez"
-                      data-team="Los Titanes"
-                      data-sport="Voleibol"
-                      data-stats="Partidos: 8, Puntos: 20, Asistencias: 6">Ver detalles</button>
             </div>
           </div>
         </div>
