--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </ul>
             <!-- Contact btn -->
             <div class="d-lg-flex col-lg-3 justify-content-lg-end">
-                <button class="btn btn-primary">Contacto</button>
+                <a href="contacto.html" class="btn btn-primary">Contacto</a>
             </div>
             </div>
         </div>
@@ -183,7 +183,7 @@
             </div>
             <div class="card-footer bg-transparent border-0 d-flex justify-content-between">
               <a href="resultados.html" class="btn btn-primary btn-sm">Ver resultados</a>
-              <a href="#" class="btn btn-outline-primary btn-sm">Contacto</a>
+              <a href="contacto.html" class="btn btn-outline-primary btn-sm">Contacto</a>
             </div>
           </div>
         </div>
@@ -215,7 +215,7 @@
             </div>
             <div class="card-footer bg-transparent border-0 d-flex justify-content-between">
               <a href="resultados.html" class="btn btn-primary btn-sm">Ver resultados</a>
-              <a href="#" class="btn btn-outline-primary btn-sm">Contacto</a>
+              <a href="contacto.html" class="btn btn-outline-primary btn-sm">Contacto</a>
             </div>
           </div>
         </div>
