--- a/clasificaciones.html
+++ b/clasificaciones.html
@@ -12,7 +12,7 @@
   <body>
   <!-- Header -->
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
             <!-- Logo img -->
             <a class="navbar-brand col-lg-3 me-0 justify-content-lg-center" href="index.html">
@@ -51,7 +51,7 @@
             </div>
         </div>
     </nav>
-   </header>
+  </header>
    <main>
    <div class="container mt-5">
         <div class="filter d-flex justify-content-between align-items-center mb-4">
@@ -155,21 +155,21 @@
 </main>
  <!-- ================================ -->
   <!-- Footer -->
-  <footer class="bg-light text-black mt-5 pt-4 pb-4">
+  <footer class="footer-content text-light mt-5 pt-4 pb-4">
   <div class="container">
     <div class="row">
       <!-- Email -->
       <div class="col-md-4 mb-3">
         <h5>Contacto</h5>
-        <p>Email: <a href="mailto:laliga@iesmaestrecalatrava.com" class="text-black">laliga@iesmaestrecalatrava.com</a></p>
+        <p>Email: <a href="mailto:laliga@iesmaestrecalatrava.com" class="text-light">laliga@iesmaestrecalatrava.com</a></p>
         <p>Teléfono: +34 123 456 789</p>
       </div>
       <!-- Legal texts -->
       <div class="col-md-4 mb-3">
         <h5>Legal</h5>
-        <a href="#" class="text-black d-block">Aviso de Privacidad</a>
-        <a href="#" class="text-black d-block">Política de Cookies</a>
-        <a href="#" class="text-black d-block">Términos y Condiciones</a>
+        <a href="#" class="text-light d-block">Aviso de Privacidad</a>
+        <a href="#" class="text-light d-block">Política de Cookies</a>
+        <a href="#" class="text-light d-block">Términos y Condiciones</a>
       </div>
       <!-- Social media -->
       <div class="col-md-4 mb-3">
@@ -184,6 +184,7 @@
     </div>
   </div>
   </footer>
+   <!-- ================================ -->
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <!-- My JS -->
