--- a/contacto.html
+++ b/contacto.html
@@ -12,11 +12,11 @@
   <body>
   <!-- Header -->
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
             <!-- Logo img -->
             <a class="navbar-brand col-lg-3 me-0 justify-content-lg-center" href="index.html">
-                <img src="assetss/img/logo.png" width="200"/>
+                <img src="assetss/img/logo.png"/>
             </a>
             <!-- Responsive button collapsable -->
              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -135,7 +135,7 @@
     <div class="modal fade" id="modalInscripcion" tabindex="-1" aria-labelledby="modalInscripcionLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-        <div class="modal-header bg-primary text-white">
+        <div class="modal-header">
             <h5 class="modal-title" id="modalInscripcionLabel">Formulario de Inscripción</h5>
             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Cerrar"></button>
         </div>
@@ -172,23 +172,23 @@
         </div>
     </div>
 </main>
- <!-- ================================ -->
+<!-- ================================ -->
   <!-- Footer -->
-  <footer class="bg-light text-black mt-5 pt-4 pb-4">
+  <footer class="footer-content text-light mt-5 pt-4 pb-4">
   <div class="container">
     <div class="row">
       <!-- Email -->
       <div class="col-md-4 mb-3">
         <h5>Contacto</h5>
-        <p>Email: <a href="mailto:laliga@iesmaestrecalatrava.com" class="text-black">laliga@iesmaestrecalatrava.com</a></p>
+        <p>Email: <a href="mailto:laliga@iesmaestrecalatrava.com" class="text-light">laliga@iesmaestrecalatrava.com</a></p>
         <p>Teléfono: +34 123 456 789</p>
       </div>
       <!-- Legal texts -->
       <div class="col-md-4 mb-3">
         <h5>Legal</h5>
-        <a href="#" class="text-black d-block">Aviso de Privacidad</a>
-        <a href="#" class="text-black d-block">Política de Cookies</a>
-        <a href="#" class="text-black d-block">Términos y Condiciones</a>
+        <a href="#" class="text-light d-block">Aviso de Privacidad</a>
+        <a href="#" class="text-light d-block">Política de Cookies</a>
+        <a href="#" class="text-light d-block">Términos y Condiciones</a>
       </div>
       <!-- Social media -->
       <div class="col-md-4 mb-3">
@@ -199,13 +199,14 @@
       </div>
     </div>
     <div class="text-center mt-6">
-      <small>&copy; 2025 Centro Educativo. Todos los derechos reservados.</small>
+      <small>&copy; 2025 Deportes - IES Maestre Calatrava. Todos los derechos reservados.</small>
     </div>
   </div>
   </footer>
+   <!-- ================================ -->
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
     <!-- My JS -->
-     <script src="js/main.js"></script>
+     <script src="bootstrap/js/main.js"></script>
   </body>
 </html>
