--- a/equipos.html
+++ b/equipos.html
@@ -13,7 +13,7 @@
   <div class="all-body-content">
   <!-- Header -->
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid">
             <!-- Logo img -->
             <a class="navbar-brand col-lg-3 me-0 justify-content-lg-center" href="index.html">
@@ -47,7 +47,7 @@
             </ul>
             <!-- Contact btn -->
             <div class="d-lg-flex col-lg-3 justify-content-lg-end">
-                <button class="btn btn-primary">Contacto</button>
+                <a href="contacto.html" class="btn btn-primary">Contacto</a>
             </div>
             </div>
         </div>
@@ -157,32 +157,32 @@
     <div class="modal fade" id="teamModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered">
         <div class="modal-content">
-        <div class="modal-header bg-primary text-white">
-            <h5 class="modal-title" id="teamModalLabel">Detalles del equipo</h5>
-            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Cerrar"></button>
-        </div>
-        <div class="modal-body" id="teamModalBody"></div>
+            <div class="modal-header text-white">
+                <h5 class="modal-title" id="teamModalLabel">Detalles del equipo</h5>
+                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+            </div>
+            <div class="modal-body" id="teamModalBody"></div>
         </div>
     </div>
 </div>
 </main>
 <!-- ================================ -->
-<!-- Footer -->
-  <footer class="bg-light text-black mt-5 pt-4 pb-4">
+  <!-- Footer -->
+  <footer class="footer-content text-light mt-5 pt-4 pb-4">
   <div class="container">
     <div class="row">
       <!-- Email -->
       <div class="col-md-4 mb-3">
         <h5>Contacto</h5>
-        <p>Email: <a href="mailto:laliga@iesmaestrecalatrava.com" class="text-black">laliga@iesmaestrecalatrava.com</a></p>
+        <p>Email: <a href="mailto:laliga@iesmaestrecalatrava.com" class="text-light">laliga@iesmaestrecalatrava.com</a></p>
         <p>Teléfono: +34 123 456 789</p>
       </div>
       <!-- Legal texts -->
       <div class="col-md-4 mb-3">
         <h5>Legal</h5>
-        <a href="#" class="text-black d-block">Aviso de Privacidad</a>
-        <a href="#" class="text-black d-block">Política de Cookies</a>
-        <a href="#" class="text-black d-block">Términos y Condiciones</a>
+        <a href="#" class="text-light d-block">Aviso de Privacidad</a>
+        <a href="#" class="text-light d-block">Política de Cookies</a>
+        <a href="#" class="text-light d-block">Términos y Condiciones</a>
       </div>
       <!-- Social media -->
       <div class="col-md-4 mb-3">
@@ -197,11 +197,10 @@
     </div>
   </div>
   </footer>
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-<!-- My JS -->
-<script src="bootstrap/js/main.js"></script>
-
-</div>  
-</body>
+   <!-- ================================ -->
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <!-- My JS -->
+     <script src="bootstrap/js/main.js"></script>
+  </body>
 </html>
